--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
     sdk: flutter
   hooks_riverpod: ^2.4.0
   flutter_hooks: ^0.20.1
-  cloud_firestore: ^4.9.1
+#  cloud_firestore: ^4.9.1
   intl: ^0.18.1
 
 
