--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,9 +30,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  firebase_core: ^2.15.1
   hooks_riverpod: ^2.4.0
   flutter_hooks: ^0.20.1
-#  cloud_firestore: ^4.9.1
+  cloud_firestore: ^4.9.1
   intl: ^0.18.1
 
 
