--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   flutter_hooks: ^0.20.1
   cloud_firestore: ^4.9.1
   intl: ^0.18.1
+  firebase_database: ^10.2.6
+
 
 
   # The following adds the Cupertino Icons font to your application.
