--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,9 +70,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - images/fastfood_potato.png
-    - images/food_karaage_cup.png
-    - images/takoyaki_fune.png
+    - images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
